# python-http-csp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_csp.py
.github/: CODEOWNERS
.github/workflows/: build-publish.yml  quality.yml
http_csp/: __init__.py  csp.py
